ISTO-128 Cache FHIR SCT CodeSystem list.